fix(404): responsive on mobile phone

--- a/src/app/pages/error-404/error-404.css
+++ b/src/app/pages/error-404/error-404.css
@@ -16,7 +16,8 @@ main {
 	justify-content: space-around;
 
 	width: 27em;
-	height: 9em;
+	max-width: calc(100vw - 3em);
+	min-height: 9em;
 }
 
 h1, h2, h3, p {
